--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <head>
         <title>Все что нужно для кота-это ваша доброта-или что нужно коту</title>
         <link rel="stylesheet" href="style.css"/>
-        
+        <meta name="google-site-verification" content="mf-e4J7W3neZCZk8dciTzDtXINRA5tpdSlE6_dmYA5g" />
     </head>
 <body>
     <header>
